@@ -502,17 +502,18 @@ public class Mesh implements Disposable {
 	 *
 	 * @param shader the shader (does not bind the shader) */
 	public void bind (final ShaderProgram shader) {
-		bind(shader, null);
+		bind(shader, null, null);
 	}
 
 	/** Binds the underlying {@link VertexBufferObject} and {@link IndexBufferObject} if indices where given. Use this with OpenGL
 	 * ES 2.0 and when auto-bind is disabled.
 	 *
 	 * @param shader the shader (does not bind the shader)
-	 * @param locations array containing the attribute locations. */
-	public void bind (final ShaderProgram shader, final int[] locations) {
+	 * @param locations array containing the vertex attribute locations.
+	 * @param instanceLocations array containing the instance attribute locations. */
+	public void bind (final ShaderProgram shader, final int[] locations, final int[] instanceLocations) {
 		vertices.bind(shader, locations);
-		if (instances != null && instances.getNumInstances() > 0) instances.bind(shader);
+		if (instances != null && instances.getNumInstances() > 0) instances.bind(shader, instanceLocations);
 		if (indices.getNumIndices() > 0) indices.bind();
 	}
 
@@ -521,17 +522,18 @@ public class Mesh implements Disposable {
 	 *
 	 * @param shader the shader (does not unbind the shader) */
 	public void unbind (final ShaderProgram shader) {
-		unbind(shader, null);
+		unbind(shader, null, null);
 	}
 
 	/** Unbinds the underlying {@link VertexBufferObject} and {@link IndexBufferObject} is indices were given. Use this with OpenGL
 	 * ES 1.x and when auto-bind is disabled.
 	 *
 	 * @param shader the shader (does not unbind the shader)
-	 * @param locations array containing the attribute locations. */
-	public void unbind (final ShaderProgram shader, final int[] locations) {
+	 * @param locations array containing the vertex attribute locations.
+	 * @param instanceLocations array containing the instance attribute locations. */
+	public void unbind (final ShaderProgram shader, final int[] locations, final int[] instanceLocations) {
 		vertices.unbind(shader, locations);
-		if (instances != null && instances.getNumInstances() > 0) instances.unbind(shader);
+		if (instances != null && instances.getNumInstances() > 0) instances.unbind(shader, instanceLocations);
 		if (indices.getNumIndices() > 0) indices.unbind();
 	}
 
@@ -679,6 +681,11 @@ public class Mesh implements Disposable {
 	/** @return the vertex attributes of this Mesh */
 	public VertexAttributes getVertexAttributes () {
 		return vertices.getAttributes();
+	}
+
+	/** @return the instanced attributes of this Mesh if any */
+	public VertexAttributes getInstancedAttributes () {
+		return instances != null ? instances.getAttributes() : null;
 	}
 
 	/** @return the backing FloatBuffer holding the vertices. Does not have to be a direct buffer on Android!
