@@ -107,6 +107,7 @@ public abstract class BaseShader implements Shader {
 	private final IntArray globalUniforms = new IntArray();
 	private final IntArray localUniforms = new IntArray();
 	private final IntIntMap attributes = new IntIntMap();
+	private final IntIntMap instancedAttributes = new IntIntMap();
 
 	public ShaderProgram program;
 	public RenderContext context;
@@ -198,6 +199,13 @@ public abstract class BaseShader implements Shader {
 				final int location = program.getAttributeLocation(attr.alias);
 				if (location >= 0) attributes.put(attr.getKey(), location);
 			}
+			final VertexAttributes iattrs = renderable.meshPart.mesh.getInstancedAttributes();
+			final int ic = iattrs.size();
+			for (int i = 0; i < ic; i++) {
+				final VertexAttribute attr = iattrs.get(i);
+				final int location = program.getAttributeLocation(attr.alias);
+				if (location >= 0) instancedAttributes.put(attr.getKey(), location);
+			}
 		}
 	}
 
@@ -212,6 +220,7 @@ public abstract class BaseShader implements Shader {
 	}
 
 	private final IntArray tempArray = new IntArray();
+	private final IntArray tempArray2 = new IntArray();
 
 	private final int[] getAttributeLocations (final VertexAttributes attrs) {
 		tempArray.clear();
@@ -221,6 +230,16 @@ public abstract class BaseShader implements Shader {
 		}
 		tempArray.shrink();
 		return tempArray.items;
+	}
+
+	private final int[] getInstancedAttributeLocations (final VertexAttributes attrs) {
+		tempArray2.clear();
+		final int n = attrs.size();
+		for (int i = 0; i < n; i++) {
+			tempArray2.add(instancedAttributes.get(attrs.get(i).getKey(), -1));
+		}
+		tempArray2.shrink();
+		return tempArray2.items;
 	}
 
 	private Attributes combinedAttributes = new Attributes();
@@ -238,9 +257,10 @@ public abstract class BaseShader implements Shader {
 		for (int u, i = 0; i < localUniforms.size; ++i)
 			if (setters.get(u = localUniforms.get(i)) != null) setters.get(u).set(this, u, renderable, combinedAttributes);
 		if (currentMesh != renderable.meshPart.mesh) {
-			if (currentMesh != null) currentMesh.unbind(program, tempArray.items);
+			if (currentMesh != null) currentMesh.unbind(program, tempArray.items, tempArray2.items);
 			currentMesh = renderable.meshPart.mesh;
-			currentMesh.bind(program, getAttributeLocations(renderable.meshPart.mesh.getVertexAttributes()));
+			currentMesh.bind(program, getAttributeLocations(renderable.meshPart.mesh.getVertexAttributes()),
+				getInstancedAttributeLocations(renderable.meshPart.mesh.getInstancedAttributes()));
 		}
 		renderable.meshPart.render(program, false);
 	}
@@ -248,7 +268,7 @@ public abstract class BaseShader implements Shader {
 	@Override
 	public void end () {
 		if (currentMesh != null) {
-			currentMesh.unbind(program, tempArray.items);
+			currentMesh.unbind(program, tempArray.items, tempArray2.items);
 			currentMesh = null;
 		}
 	}
